--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Créaphé</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+<link rel="stylesheet" href="static/css/styles.css">
 </head>
 
 <body>
@@ -19,8 +20,7 @@
 
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="#">A propos</a></li>
-					<li><a href="#">Contact</a></li>
+					<li><a href="#">Nous contacter</a></li>
 					<li><a href="#">Adhérer</a></li>
 				</ul>
 			</div>
@@ -29,4 +29,53 @@
 		<!-- /.container-fluid -->
 	</nav>
 
+	<div class="jumbotron">
+		<div class="container">
+  			<h1>L'association qui vous ressemble</h1>
+  			<p>Le fait-main, l'artisanat, la création par vous et pour vous</p>
+  			<p><a class="btn btn-primary btn-lg" href="#" role="button">En savoir plus</a></p>
+  		</div>
+	</div>
+
+	<div class="page-header text-center">
+  		<h1>Les ateliers</h1>
+  		<p class="lead">Petits et grands : tout le monde a le droit de s'amuser, de s'ouvrir à l'art</p>
+	</div>
+
+	<div class="container-fluid">
+		Les ateliers....
+	</div>
+
+	<div class="page-header text-center">
+  		<h1>Les artistes</h1>
+  		<p class="lead">Découvrez comment soutenir l'artisanat, proposer vos créations</p>
+	</div>	
+
+	<div class="container">
+		<div class="row">
+  			<div class="col-xs-6 col-md-3">
+    			<a href="#" class="thumbnail">
+      				<img src="holder.js/242x280">
+    			</a>
+  			</div>
+  			<div class="col-xs-6 col-md-3">
+    			<a href="#" class="thumbnail">
+      				<img src="holder.js/242x280">
+    			</a>
+  			</div>
+  			<div class="col-xs-6 col-md-3">
+    			<a href="#" class="thumbnail">
+      				<img src="holder.js/242x280">
+    			</a>
+  			</div>
+  			<div class="col-xs-6 col-md-3">
+    			<a href="#" class="thumbnail">
+      				<img src="holder.js/242x280">
+    			</a>
+  			</div>
+		</div>
+	</div>
+
+
+	<script src="static/js/holder.min.js"></script>
 </body>
