--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
 
 <body>
 
-	<nav class="navbar navbar-default">
+	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class="container-fluid">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="#">Créaphé</a>
+				<a class="navbar-brand" href="/">Créaphé</a>
 			</div>
 
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav navbar-right">
+					<li><a href="aboutus.html">Qui sommes-nous?</a></li>
 					<li><a href="#">Nous contacter</a></li>
 					<li><a href="#">Adhérer</a></li>
 				</ul>
