started on video

--- a/aboutus.html
+++ b/aboutus.html
@@ -31,16 +31,59 @@
 	</nav>
 
 	<div class="container">
-		<div class="row">
-        	<div class="col-sm-3 col-md-2 sidebar">
-          		<ul class="nav nav-sidebar">
-            		<li class="active"><a href="#">L'association</a></li>
-            		<li><a href="#">Notre histoire</a></li>
-            		<li><a href="#">Nos objectifs</a></li>
-            		<li><a href="#">Nos valeurs</a></li>
-          		</ul>
-          	</div>
-        </div>
+		<div class="page-header">
+	        <h1>A propos de nous</h1>
+	        <p>
+			    Le café créatif <bold>CRÉAPHÉ</bold> est une association fondée en 2015, dédiée à l’expression créative et au fait main sur la métropole lilloise. 
+				<br>
+							
+			    À travers les ateliers, elle a pour ambition de créer du lien social pour rompre l’isolement des familles, encourager et favoriser la mixité culturelle, intergénérationnelle, sociale, transmettre des valeurs de partage, de l’entraide, de respect de l’environnement et d’ouverture sur le monde, s’appuyer sur la création artistique et culturelle, pour renforcer et créer un ancrage local, participer, transmettre, échanger les savoir-faire avec à d'autres mouvements artistiques, promouvoir tous qui aiment créer.
+			 
+				Ateliers d’artistes, Coworking place, culture artistique, atelier de création Libre » pour enfants, la structure (à la fois destinée aux amateurs débutants et aux plus experts) se propose plusieurs activités
+			</p>
+		</div>
+
+		<div class="page-header">
+	        <h1>Notre histoire</h1>
+	        <p>
+			    « Fais de ta vie un rêve, et d’un rêve, une réalité »
+
+(Le Petit Prince de Antoine de Saint-Exupéry)
+
+
+Tania Blanquart, 31 ans, née au Portugal, dans une maison autour des champs agricoles et vignobles familiaux. Arrière-petite-fille d’un charpentier, un père doué pour le dessin et une maman manuelle débrouillarde en temps de crise ! Cursus en musique, diplôme professionnel en arts. Etudes supérieures en ingénierie de produits biologiques, Master pro en marketing. 
+Mariée avec un Ch’ti, bloguese de Minibohomemade, maman poule de 2 petits poussins. Et toujours passionnée par la les arts, de tous ces qui est fait-main et artistique!
+
+
+« Cela ne faisait qu’un an depuis la naissance de mon premier que j’ai recommencé les activités loisirs artistiques. Mais quelque soit notre métier, salariée, mamans au foyer, congé parentale comme moi, nous pouvons vite être démotivées, soit par le manque de temps, soit pour la manque d’emplacement, soit parce que nous avons des enfants très petits qu’il faut surveiller, soit car nous nous sentions un peu seules à la maison.. 
+J’ai constaté que je n’étaient pas seule, que beaucoup d’autres créateurs comme moi, recherchent ce contact humain, ont envie de partager et d’échanger tout en créant, et que plus part d’entre elles sont des mamans comme moi, avec des super pouvoirs pour tout faire. Et c’est de là qui est née l’idée de créer un café créatif solidaire. Avec les superpouvoirs de mon mari (qui s’occupe de la création du site), mon rêve a commençait à gagner de la forme… 
+
+
+Alexandre Blanquart, un papa et mari de Tânia, un geek passioné pour les nouvelles technologies et l’envie de partager ses connaissances et s’éclater dans ce projet. Passioné par les langues, plusieurs stages linguistiques en Japon, U.S.A, et au Portugal (chez la belle famille). Une famille accro aux arts, cursus en prépa et Ingénieur Télécom, salarié en tant que Ing. R&D dans un entreprise éditeur Logiciel, et un envie de partager, apprendre, et créer des nouvelles technologies informatique! 
+
+
+
+
+
+
+
+C’est donc avec la rencontre d’Annelise dans un cours de couture qui a permis de créer cette association. 
+Annelise Ayatsou, bordelaise d’origine est maman d’une petite choue de 2 ans. Passionnée par la danse, le théâtre et photo. Attiré par tout type d’expression artistique, participation à des projets solidaires en tant que bénévole. D’un point de vue professionnel, c’est en tant que chef de projet marketing, planneur stratégique ou encore responsable de communication que j’évolue en tant que salariée puis indépendant.
+
+
+« Aujourd’hui je travaille à la maison sur le développement de projet personnel : récupération créative (couture, déco, etc.), écriture d’histoire pour ma fille, herboriste/aromathérapie. 
+J’aspire à créer un lieu ou je pourrai sortir de cet isolement, partager et me nourrir des talents d’autres personnes et pourquoi pas mettre en place des ateliers sur ces thématiques. » 
+
+
+Le rassemblement des ces 3 profils ont créer l’association en Janvier 2015.Un projet surtout communautaire, humain, avec la partage de valeurs solidaires dont tout le monde est créatif et peut donner ailes à la créativité sur tous les formes! Que vous aimez les arts plastiques, la couture, la photographie, cartonnage, ou tout autre passion créative, vous êtes le bienvenue parmi nous! 
+
+
+
+
+ « Soyez le changement que vous voulez voir dans le monde. (GANDHI) »
+
+			</p>
+		</div>
 	</div>
 
 </body>
