--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="aboutus.html">Qui sommes-nous?</a></li>
-					<li><a href="#">Nous contacter</a></li>
+					<li><a href="contact.html">Nous contacter</a></li>
 					<li><a href="#">Adhérer</a></li>
 				</ul>
 			</div>
@@ -30,8 +30,18 @@
 		<!-- /.container-fluid -->
 	</nav>
 
+<div class="embed-responsive embed-responsive-16by9" id="bgvid">
+    <video autoplay loop preload="auto" class="embed-responsive-item">
+    	<source src="static/video2.mp4" type="video/mp4">
+    </video>
+</div>
+	
+
 	<div class="jumbotron">
 		<div class="container">
+
+			
+
   			<h1>L'association qui vous ressemble</h1>
   			<p>Le fait-main, l'artisanat, la création par vous et pour vous</p>
   			<p><a class="btn btn-primary btn-lg" href="#" role="button">En savoir plus</a></p>
