--- a/index.html
+++ b/index.html
@@ -30,21 +30,15 @@
 		<!-- /.container-fluid -->
 	</nav>
 
-<div class="embed-responsive embed-responsive-16by9" id="bgvid">
-    <video autoplay loop preload="auto" class="embed-responsive-item">
-    	<source src="static/video2.mp4" type="video/mp4">
+   <video autoplay loop preload="auto" id="videobg">
+    	<source src="static/videobg.mp4" type="video/mp4">
     </video>
-</div>
-	
 
 	<div class="jumbotron">
 		<div class="container">
-
-			
-
   			<h1>L'association qui vous ressemble</h1>
   			<p>Le fait-main, l'artisanat, la création par vous et pour vous</p>
-  			<p><a class="btn btn-primary btn-lg" href="#" role="button">En savoir plus</a></p>
+  			<p><a class="btn btn-primary btn-lg" href="#" role="button">En savoir plus</a></p>	
   		</div>
 	</div>
 
