--- a/index.html
+++ b/index.html
@@ -30,16 +30,19 @@
 		<!-- /.container-fluid -->
 	</nav>
 
-   <video autoplay loop preload="auto" id="videobg">
-    	<source src="static/videobg.mp4" type="video/mp4">
-    </video>
+	<div id="starter">
+		<video id="videobg" autoplay loop preload="auto">
+	    	<!--<source src="static/videobg.mp4" type="video/mp4">-->
+	    	<source src="test.mp4" type="video/mp4">
+	    </video>
 
-	<div class="jumbotron">
-		<div class="container">
-  			<h1>L'association qui vous ressemble</h1>
-  			<p>Le fait-main, l'artisanat, la création par vous et pour vous</p>
-  			<p><a class="btn btn-primary btn-lg" href="#" role="button">En savoir plus</a></p>	
-  		</div>
+		<div class="jumbotron transparentbg whitecolor">
+			<div class="container">
+	  			<h1>L'association qui vous ressemble</h1>
+	  			<p>Le fait-main, l'artisanat, la création par vous et pour vous</p>
+	  			<p><a class="btn btn-primary btn-lg" href="#" role="button">En savoir plus</a></p>	
+	  		</div>
+		</div>
 	</div>
 
 	<div class="page-header text-center">
