--- a/aboutus.html
+++ b/aboutus.html
@@ -15,19 +15,17 @@
 	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class="container-fluid">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html">Créaphé</a>
+				<a class="navbar-brand" href="index.html">
+					<img src="static/img/logo.png">
+				</a>
 			</div>
 
-			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-				<ul class="nav navbar-nav navbar-right">
-					<li><a href="aboutus.html">Qui sommes-nous?</a></li>
-					<li><a href="#">Nous contacter</a></li>
-					<li><a href="#">Adhérer</a></li>
-				</ul>
-			</div>
-			<!-- /.navbar-collapse -->
+			<ul class="nav navbar-nav navbar-right">
+				<li><a href="aboutus.html">Qui sommes-nous?</a></li>
+				<li><a href="contact.html">Nous contacter</a></li>
+				<li><a href="#">Adhérer</a></li>
+			</ul>
 		</div>
-		<!-- /.container-fluid -->
 	</nav>
 
 	<div class="container">
