--- a/index.html
+++ b/index.html
@@ -15,25 +15,23 @@
 	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class="container-fluid">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="/">Créaphé</a>
+				<a class="navbar-brand" href="index.html">
+					<img src="static/img/logo.png">
+				</a>
 			</div>
 
-			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-				<ul class="nav navbar-nav navbar-right">
-					<li><a href="aboutus.html">Qui sommes-nous?</a></li>
-					<li><a href="contact.html">Nous contacter</a></li>
-					<li><a href="#">Adhérer</a></li>
-				</ul>
-			</div>
-			<!-- /.navbar-collapse -->
+			<ul class="nav navbar-nav navbar-right">
+				<li><a href="aboutus.html">Qui sommes-nous?</a></li>
+				<li><a href="contact.html">Nous contacter</a></li>
+				<li><a href="#">Adhérer</a></li>
+			</ul>
 		</div>
-		<!-- /.container-fluid -->
 	</nav>
 
 	<div id="starter">
 		<video id="videobg" autoplay loop preload="auto">
 	    	<!--<source src="static/videobg.mp4" type="video/mp4">-->
-	    	<source src="test.mp4" type="video/mp4">
+	    	<source src="/Users/familleblanquart/Desktop/videobg.mp4" type="video/mp4">
 	    </video>
 
 		<div class="jumbotron transparentbg whitecolor">
@@ -83,6 +81,12 @@
   			</div>
 		</div>
 	</div>
+
+	<footer class="footer">
+    	<div class="container">
+        	<p class="text-muted">Mentions légales</p>
+      	</div>
+    </footer>
 
 
 	<script src="static/js/holder.min.js"></script>
