--- a/contact.html
+++ b/contact.html
@@ -40,18 +40,18 @@
 			    <div class="form-group">
 			        <label for="email" class="col-sm-2 control-label">Email</label>
 			        <div class="col-sm-10">
-			            <input type="email" class="form-control" id="email" name="email" placeholder="example@domain.com" value="">
+			            <input type="email" class="form-control" id="email" name="email" placeholder="monemail@domaine.com" value="">
 			        </div>
 			    </div>
 			    <div class="form-group">
 			        <label for="message" class="col-sm-2 control-label">Message</label>
 			        <div class="col-sm-10">
-			            <textarea class="form-control" rows="4" name="message"></textarea>
+			            <textarea class="form-control" rows="4" name="message" placeholder="C'est à vous"></textarea>
 			        </div>
 			    </div>
 			    <div class="form-group">
 			        <div class="col-sm-10 col-sm-offset-2">
-			            <input id="submit" name="submit" type="submit" value="Send" class="btn btn-primary">
+			            <input id="submit" name="submit" type="submit" value="Envoyer" class="btn btn-primary">
 			        </div>
 			    </div>
 			</form>
