blog/post, fontawesome

--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,7 @@
 
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href="aboutus.html">Qui sommes-nous?</a></li>
+				<li><a href="blog.html">Actualités</a></li>
 				<li><a href="contact.html">Nous contacter</a></li>
 				<li><a href="#">Adhérer</a></li>
 			</ul>
