--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Créaphé</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+<link href='http://fonts.googleapis.com/css?family=Lato:300italic' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="static/css/font-awesome.min.css">
 <link rel="stylesheet" href="static/css/styles.css">
 </head>
 
@@ -22,6 +24,7 @@
 
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href="aboutus.html">Qui sommes-nous?</a></li>
+				<li><a href="blog.html">Actualités</a></li>
 				<li><a href="contact.html">Nous contacter</a></li>
 				<li><a href="#">Adhérer</a></li>
 			</ul>
@@ -29,7 +32,7 @@
 	</nav>
 
 	<div id="starter">
-		<video id="videobg" autoplay loop preload="auto">
+		<video id="videobg" autoplay loop muted preload="auto">
 	    	<!--<source src="static/videobg.mp4" type="video/mp4">-->
 	    	<source src="/Users/familleblanquart/Desktop/videobg.mp4" type="video/mp4">
 	    </video>
@@ -46,10 +49,6 @@
 	<div class="page-header text-center">
   		<h1>Les ateliers</h1>
   		<p class="lead">Petits et grands : tout le monde a le droit de s'amuser, de s'ouvrir à l'art</p>
-	</div>
-
-	<div class="container-fluid">
-		Les ateliers....
 	</div>
 
 	<div class="page-header text-center">
@@ -88,6 +87,8 @@
       	</div>
     </footer>
 
-
 	<script src="static/js/holder.min.js"></script>
+	<script src="static/js/app.js"></script>
 </body>
+
+</html>>
