a lot of stuff mainly footer, google maps

--- a/blog.html
+++ b/blog.html
@@ -23,10 +23,11 @@
 			</div>
 
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="aboutus.html">Qui sommes-nous?</a></li>
+				<li><a href="about.html">Notre projet</a></li>
+				<li><a href="founding.html">Nous soutenir</a></li>
 				<li><a href="blog.html">Actualités</a></li>
 				<li><a href="contact.html">Nous contacter</a></li>
-				<li><a href="#">Adhérer</a></li>
+				<li><a href="join.html">Adhérer</a></li>
 			</ul>
 		</div>
 	</nav>
@@ -141,12 +142,12 @@
 					</div>
 					<div class="panel-body">
 						<ul class="list-inline">
-  							<li>art</li>
-  							<li>exhibition</li>
-  							<li>festival</li>
-  							<li>review</li>
-  							<li>theatre</li>
-  							<li>video</li>
+  							<li><span class="label label-info">art</span></li>
+  							<li><span class="label label-info">exhibition</span></li>
+  							<li><span class="label label-info">festival</span></li>
+  							<li><span class="label label-info">review</span></li>
+  							<li><span class="label label-info">theatre</span></li>
+  							<li><span class="label label-info">video</span></li>
 						</ul>
 					</div>
 				</div>
@@ -154,9 +155,37 @@
     	</div>
 	</div>
 
-	<footer class="footer">
+	<footer class="footer text-center">
     	<div class="container">
-        	<p class="text-muted">Mentions légales</p>
+    		<div class="row">
+    			<div class="col-sm-12">
+    				<p class="lead"><strong>Créaphé</strong></p>
+    				<ul class="list-unstyled">
+  						<li><i class="fa fa-phone"></i> Téléphone</li>
+  						<li><i class="fa fa-envelope-o"></i> <a href="mailto:#">bonjour.creaphe@gmail.com</a></li>
+  						<li><i class="fa fa-home"></i> Lille</li>
+					</ul>
+					<ul class="list-inline">
+						<li><p class="text-uppercase"><strong>Magazine (prochainement)</strong></p></li>
+						<li><p class="text-uppercase"><strong><a href="blog.html">Notre projet</a></strong></p></li>
+						<li><p class="text-uppercase"><strong><a href="founding.html">Nous soutenir</a></strong></p></li>
+						<li><p class="text-uppercase"><strong><a href="blog.html">Actualités</a></strong></p></li>
+						<li><p class="text-uppercase"><strong><a href="contact.html">Nous contacter</a></strong></p></li>
+						<li><p class="text-uppercase"><strong><a href="join.html">Adhérer</a></strong></p></li>
+					</ul>
+    				<p class="text-uppercase"><strong>Conditions générales d'utilisation et confidentialité</strong></p>
+
+    				<hr/>
+
+    				<p class="lead"><strong>Rejoignez-nous sur</strong></p>
+    				<ul class="list-inline">
+    					<li><i class="fa fa-facebook-square fa-2x"></i></li>
+						<li><i class="fa fa-pinterest-square fa-2x"></i></li>
+						<li><i class="fa fa-instagram fa-2x"></i></li>
+					</ul>
+					<p class="text-muted"><small>© 2015 Créaphé, All rights reserved</small></p>
+    			</div>
+    		</div>
       	</div>
     </footer>
 
