--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
 			</div>
 
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="aboutus.html">Qui sommes-nous?</a></li>
+				<li><a href="about.html">Notre projet</a></li>
+				<li><a href="founding.html">Nous soutenir</a></li>
 				<li><a href="blog.html">Actualités</a></li>
 				<li><a href="contact.html">Nous contacter</a></li>
-				<li><a href="#">Adhérer</a></li>
+				<li><a href="join.html">Adhérer</a></li>
 			</ul>
 		</div>
 	</nav>
@@ -34,61 +35,124 @@
 	<div id="starter">
 		<video id="videobg" autoplay loop muted preload="auto">
 	    	<!--<source src="static/videobg.mp4" type="video/mp4">-->
-	    	<source src="/Users/familleblanquart/Desktop/videobg.mp4" type="video/mp4">
+	    	<source src="../videobg.mp4" type="video/mp4">
 	    </video>
 
 		<div class="jumbotron transparentbg whitecolor">
 			<div class="container">
 	  			<h1>L'association qui vous ressemble</h1>
 	  			<p>Le fait-main, l'artisanat, la création par vous et pour vous</p>
-	  			<p><a class="btn btn-primary btn-lg" href="#" role="button">En savoir plus</a></p>	
+	  			<p><a class="btn btn-primary btn-lg" href="about.html" role="button">En savoir plus</a></p>	
 	  		</div>
 		</div>
 	</div>
 
 	<div class="page-header text-center">
-  		<h1>Les ateliers</h1>
-  		<p class="lead">Petits et grands : tout le monde a le droit de s'amuser, de s'ouvrir à l'art</p>
+  		<h1>Actualités</h1>
+  		<p class="lead">Evénements, artistes, show-room, ateliers du moment</p>
+	</div>
+
+	<div class="container">
+		<div class="row">
+			<div class="col-xs-6 col-md-3">
+		    	<a href="#" class="thumbnail">
+		      		<img src="holder.js/242x280">
+		    	</a>
+		  	</div>
+		  	<div class="col-xs-6 col-md-3">
+		    	<a href="#" class="thumbnail">
+		      		<img src="holder.js/242x280">
+		    	</a>
+		  	</div>
+		  	<div class="col-xs-6 col-md-3">
+		    	<a href="#" class="thumbnail">
+		      		<img src="holder.js/242x280">
+		    	</a>
+		  	</div>
+		  	<div class="col-xs-6 col-md-3">
+		    	<a href="#" class="thumbnail">
+		      		<img src="holder.js/242x280">
+		    	</a>
+		  	</div>
+		</div>
 	</div>
 
 	<div class="page-header text-center">
-  		<h1>Les artistes</h1>
-  		<p class="lead">Découvrez comment soutenir l'artisanat, proposer vos créations</p>
+  		<h1>Notre communauté</h1>
+  		<p class="lead">Les personnes derrière le projet, les bénévoles, les artistes</p>
 	</div>	
 
 	<div class="container">
 		<div class="row">
-  			<div class="col-xs-6 col-md-3">
-    			<a href="#" class="thumbnail">
-      				<img src="holder.js/242x280">
-    			</a>
-  			</div>
-  			<div class="col-xs-6 col-md-3">
-    			<a href="#" class="thumbnail">
-      				<img src="holder.js/242x280">
-    			</a>
-  			</div>
-  			<div class="col-xs-6 col-md-3">
-    			<a href="#" class="thumbnail">
-      				<img src="holder.js/242x280">
-    			</a>
-  			</div>
-  			<div class="col-xs-6 col-md-3">
-    			<a href="#" class="thumbnail">
-      				<img src="holder.js/242x280">
-    			</a>
-  			</div>
+			<div class="col-sm-8 col-sm-offset-2">
+				<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+			    	<ol class="carousel-indicators">
+			        	<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+			        	<li data-target="#carousel-example-generic" data-slide-to="1"></li>
+			        	<li data-target="#carousel-example-generic" data-slide-to="2"></li>
+			      	</ol>
+			      	<div class="carousel-inner" role="listbox">
+			        	<div class="item active">
+			          		<img data-src="holder.js/900x500/auto/#777:#555/text:Première personne" alt="First slide">
+			        	</div>
+			        	<div class="item">
+			          		<img data-src="holder.js/900x500/auto/#666:#444/text:Deuxième personne" alt="Second slide">
+			        	</div>
+			        	<div class="item">
+			          		<img data-src="holder.js/900x500/auto/#555:#333/text:Troisième personne" alt="Third slide">
+			        	</div>
+			      	</div>
+			      	<a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+			        	<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+			        	<span class="sr-only">Précédent</span>
+			      	</a>
+			      	<a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+			        	<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+			        	<span class="sr-only">Suivant</span>
+			      	</a>
+			    </div>
+			</div>
 		</div>
 	</div>
 
-	<footer class="footer">
+	<footer class="footer text-center">
     	<div class="container">
-        	<p class="text-muted">Mentions légales</p>
+    		<div class="row">
+    			<div class="col-sm-12">
+    				<p class="lead"><strong>Créaphé</strong></p>
+    				<ul class="list-unstyled">
+  						<li><i class="fa fa-phone"></i> Téléphone</li>
+  						<li><i class="fa fa-envelope-o"></i> <a href="mailto:#">bonjour.creaphe@gmail.com</a></li>
+  						<li><i class="fa fa-home"></i> Lille</li>
+					</ul>
+					<ul class="list-inline">
+						<li><p class="text-uppercase"><strong>Magazine (prochainement)</strong></p></li>
+						<li><p class="text-uppercase"><strong><a href="blog.html">Notre projet</a></strong></p></li>
+						<li><p class="text-uppercase"><strong><a href="founding.html">Nous soutenir</a></strong></p></li>
+						<li><p class="text-uppercase"><strong><a href="blog.html">Actualités</a></strong></p></li>
+						<li><p class="text-uppercase"><strong><a href="contact.html">Nous contacter</a></strong></p></li>
+						<li><p class="text-uppercase"><strong><a href="join.html">Adhérer</a></strong></p></li>
+					</ul>
+    				<p class="text-uppercase"><strong>Conditions générales d'utilisation et confidentialité</strong></p>
+
+    				<hr/>
+
+    				<p class="lead"><strong>Rejoignez-nous sur</strong></p>
+    				<ul class="list-inline">
+    					<li><i class="fa fa-facebook-square fa-2x"></i></li>
+						<li><i class="fa fa-pinterest-square fa-2x"></i></li>
+						<li><i class="fa fa-instagram fa-2x"></i></li>
+					</ul>
+					<p class="text-muted"><small>© 2015 Créaphé, All rights reserved</small></p>
+    			</div>
+    		</div>
       	</div>
     </footer>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 	<script src="static/js/holder.min.js"></script>
 	<script src="static/js/app.js"></script>
 </body>
 
-</html>>
+</html>
