--- a/contact.html
+++ b/contact.html
@@ -45,10 +45,27 @@
 
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href="about.html">Notre projet</a></li>
-				<li><a href="founding.html">Nous soutenir</a></li>
-				<li><a href="blog.html">Actualités</a></li>
-				<li><a href="contact.html">Nous contacter</a></li>
-				<li><a href="join.html">Adhérer</a></li>
+				<li><a href="funding.html">Nous soutenir</a></li>
+				<li class="dropdown">
+		        	<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Projets 
+		        		<span class="caret"></span>
+		        	</a>
+		          	<ul class="dropdown-menu" role="menu">
+			            <li><a href="#">Ateliers</a></li>
+			            <li><a href="#">Formations</a></li>
+		          	</ul>
+		        </li>
+				<li class="dropdown">
+		        	<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Communauté 
+		        		<span class="caret"></span>
+		        	</a>
+		          	<ul class="dropdown-menu" role="menu">
+			            <li><a href="#">Artistes et artisans</a></li>
+			            <li><a href="#">Boutique</a></li>
+		          	</ul>
+		        </li>
+				<li><a href="blog.html">Blog</a></li>
+				<li><a href="join.html">Inscription</a></li>
 			</ul>
 		</div>
 	</nav>
@@ -91,7 +108,9 @@
 			<div class="col-sm-6">
 				<address>
   					<strong>Venez nous voir</strong><br>
-  					Lille
+  					<i class="fa fa-home"></i> Lille<br>
+  					<strong>N'hésitez pas à nous appeler</strong><br>
+  					<i class="fa fa-phone"></i> Numéro
 				</address>
 				<div id="map-canvas"></div>
 			</div>
@@ -103,20 +122,24 @@
     		<div class="row">
     			<div class="col-sm-12">
     				<p class="lead"><strong>Créaphé</strong></p>
-    				<ul class="list-unstyled">
-  						<li><i class="fa fa-phone"></i> Téléphone</li>
-  						<li><i class="fa fa-envelope-o"></i> <a href="mailto:#">bonjour.creaphe@gmail.com</a></li>
-  						<li><i class="fa fa-home"></i> Lille</li>
+    				<ul class="list-inline">
+						<li><p><strong><a href="blog.html">Blog</a></strong></p></li>
+						<li><p><strong><a href="founding.html">Magazine</a></strong></p></li>
+						<li><p><strong><a href="blog.html">S'inscrire à la newsletter</a></strong></p></li>
 					</ul>
 					<ul class="list-inline">
-						<li><p class="text-uppercase"><strong>Magazine (prochainement)</strong></p></li>
-						<li><p class="text-uppercase"><strong><a href="blog.html">Notre projet</a></strong></p></li>
-						<li><p class="text-uppercase"><strong><a href="founding.html">Nous soutenir</a></strong></p></li>
-						<li><p class="text-uppercase"><strong><a href="blog.html">Actualités</a></strong></p></li>
-						<li><p class="text-uppercase"><strong><a href="contact.html">Nous contacter</a></strong></p></li>
-						<li><p class="text-uppercase"><strong><a href="join.html">Adhérer</a></strong></p></li>
+						<li><p><strong><a href="blog.html">Notre projet</a></strong></p></li>
+						<li><p><strong><a href="founding.html">Nous soutenir</a></strong></p></li>
+						<li><p><strong><a href="contact.html">Nous contacter</a></strong></p></li>
+						<li><p><strong><a href="join.html">Inscription</a></strong></p></li>
+						<li><p><strong><a href="join.html">Remerciements</a></strong></p></li>
 					</ul>
-    				<p class="text-uppercase"><strong>Conditions générales d'utilisation et confidentialité</strong></p>
+					<ul class="list-inline">
+						<li><p class="text-uppercase"><strong>Statut associatif</strong></p></li>
+						<li><p class="text-uppercase"><strong>CGU</strong></p></li>
+						<li><p class="text-uppercase"><strong>Mentions légales</strong></p></li>
+						<li><p class="text-uppercase"><strong>Plan du site</strong></p></li>
+					</ul>
 
     				<hr/>
 
