--- a/funding.html
+++ b/funding.html
@@ -49,94 +49,92 @@
 		</div>
 	</nav>
 
-	<div id="starter">
-		<video id="videobg" autoplay loop muted preload="auto">
-	    	<!--<source src="static/videobg.mp4" type="video/mp4">-->
-	    	<source src="../videobg.mp4" type="video/mp4">
-	    </video>
-
-		<div class="jumbotron transparentbg whitecolor">
-			<div class="container">
-	  			<h1>L'association qui vous ressemble</h1>
-	  			<p>Le fait-main, l'artisanat, la création par vous et pour vous</p>
-	  			<p><a class="btn btn-primary btn-lg" href="about.html" role="button">En savoir plus</a></p>	
-	  		</div>
-		</div>
-	</div>
-
 	<div class="page-header text-center">
-  		<h1>Actualités</h1>
+  		<h1>Adhérer</h1>
   		<p class="lead">Evénements, artistes, show-room, ateliers du moment</p>
 	</div>
 
 	<div class="container">
 		<div class="row">
-			<div class="col-xs-6 col-md-3">
-		    	<a href="#" class="thumbnail">
-		      		<img src="holder.js/242x280">
+			<div class="col-sm-6">
+				<a href="#" class="thumbnail">
+		      		<img src="holder.js/400x300">
 		    	</a>
-		  	</div>
-		  	<div class="col-xs-6 col-md-3">
-		    	<a href="#" class="thumbnail">
-		      		<img src="holder.js/242x280">
-		    	</a>
-		  	</div>
-		  	<div class="col-xs-6 col-md-3">
-		    	<a href="#" class="thumbnail">
-		      		<img src="holder.js/242x280">
-		    	</a>
-		  	</div>
-		  	<div class="col-xs-6 col-md-3">
-		    	<a href="#" class="thumbnail">
-		      		<img src="holder.js/242x280">
-		    	</a>
-		  	</div>
+			</div>
+			<div class="col-sm-6">
+				<p>Morbi vel magna dignissim, pretium elit at, sagittis nisl. Nulla porttitor magna vel massa accumsan aliquam. Duis vulputate varius odio, et porttitor quam dignissim quis. Mauris vulputate ullamcorper eros. Proin eu tempor nisi. Aenean fringilla euismod ante non suscipit. Integer fermentum volutpat enim, vitae tempor diam efficitur a. Integer mollis arcu quis ipsum lobortis, eget dapibus tortor sagittis.</p>
+			</div>
 		</div>
 	</div>
 
 	<div class="page-header text-center">
-  		<h1>Agenda</h1>
-  		<p class="lead">Des ateliers pour les petits comme les grands</p>
-	</div>	
-
-	<!---PLANNING-->
-
-	<div class="page-header text-center">
-  		<h1>Notre communauté artistique</h1>
-  		<p class="lead">L'art sous toutes ses formes</p>
-	</div>	
-
-	<!--SLIDER -->
+  		<h1>Bénévolat</h1>
+  		<p class="lead">Evénements, artistes, show-room, ateliers du moment</p>
+	</div>
 
 	<div class="container">
 		<div class="row">
-			<div class="col-sm-8 col-sm-offset-2">
-				<div id="mutlicarousel" class="carousel slide" data-ride="carousel">
-			    	<ol class="carousel-indicators">
-			        	<li data-target="#mutlicarousel" data-slide-to="0" class="active"></li>
-			        	<li data-target="#mutlicarousel" data-slide-to="1"></li>
-			        	<li data-target="#mutlicarousel" data-slide-to="2"></li>
-			      	</ol>
-			      	<div class="carousel-inner" role="listbox">
-			        	<div class="item active">
-			          		<img data-src="holder.js/900x500/auto/#777:#555/text:Première personne" alt="First slide">
-			        	</div>
-			        	<div class="item">
-			          		<img data-src="holder.js/900x500/auto/#666:#444/text:Deuxième personne" alt="Second slide">
-			        	</div>
-			        	<div class="item">
-			          		<img data-src="holder.js/900x500/auto/#555:#333/text:Troisième personne" alt="Third slide">
-			        	</div>
-			      	</div>
-			      	<a class="left carousel-control" href="#mutlicarousel" role="button" data-slide="prev">
-			        	<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-			        	<span class="sr-only">Précédent</span>
-			      	</a>
-			      	<a class="right carousel-control" href="#mutlicarousel" role="button" data-slide="next">
-			        	<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-			        	<span class="sr-only">Suivant</span>
-			      	</a>
-			    </div>
+			<div class="col-sm-6">
+				<p>Morbi vel magna dignissim, pretium elit at, sagittis nisl. Nulla porttitor magna vel massa accumsan aliquam. Duis vulputate varius odio, et porttitor quam dignissim quis. Mauris vulputate ullamcorper eros. Proin eu tempor nisi. Aenean fringilla euismod ante non suscipit. Integer fermentum volutpat enim, vitae tempor diam efficitur a. Integer mollis arcu quis ipsum lobortis, eget dapibus tortor sagittis.</p>
+			</div>
+			<div class="col-sm-6">
+				<a href="#" class="thumbnail">
+		      		<img src="holder.js/400x300">
+		    	</a>
+			</div>
+		</div>
+	</div>
+
+	<div class="page-header text-center">
+  		<h1>Mécénat</h1>
+  		<p class="lead">Evénements, artistes, show-room, ateliers du moment</p>
+	</div>
+
+	<div class="container">
+		<div class="row">
+			<div class="col-sm-6">
+				<a href="#" class="thumbnail">
+		      		<img src="holder.js/400x300">
+		    	</a>
+			</div>
+			<div class="col-sm-6">
+				<p>Morbi vel magna dignissim, pretium elit at, sagittis nisl. Nulla porttitor magna vel massa accumsan aliquam. Duis vulputate varius odio, et porttitor quam dignissim quis. Mauris vulputate ullamcorper eros. Proin eu tempor nisi. Aenean fringilla euismod ante non suscipit. Integer fermentum volutpat enim, vitae tempor diam efficitur a. Integer mollis arcu quis ipsum lobortis, eget dapibus tortor sagittis.</p>
+			</div>	
+		</div>
+	</div>
+
+	<div class="page-header text-center">
+  		<h1>Espace pro</h1>
+  		<p class="lead">Evénements, artistes, show-room, ateliers du moment</p>
+	</div>
+
+	<div class="container">
+		<div class="row">
+			<div class="col-sm-6">
+				<p>Morbi vel magna dignissim, pretium elit at, sagittis nisl. Nulla porttitor magna vel massa accumsan aliquam. Duis vulputate varius odio, et porttitor quam dignissim quis. Mauris vulputate ullamcorper eros. Proin eu tempor nisi. Aenean fringilla euismod ante non suscipit. Integer fermentum volutpat enim, vitae tempor diam efficitur a. Integer mollis arcu quis ipsum lobortis, eget dapibus tortor sagittis.</p>
+			</div>
+			<div class="col-sm-6">
+				<a href="#" class="thumbnail">
+		      		<img src="holder.js/400x300">
+		    	</a>
+			</div>
+		</div>
+	</div>
+
+	<div class="page-header text-center">
+  		<h1>Faire un don</h1>
+  		<p class="lead">Evénements, artistes, show-room, ateliers du moment</p>
+	</div>
+
+	<div class="container">
+		<div class="row">
+			<div class="col-sm-6">
+				<a href="#" class="thumbnail">
+		      		<img src="holder.js/400x300">
+		    	</a>
+			</div>
+			<div class="col-sm-6">
+				<p>Morbi vel magna dignissim, pretium elit at, sagittis nisl. Nulla porttitor magna vel massa accumsan aliquam. Duis vulputate varius odio, et porttitor quam dignissim quis. Mauris vulputate ullamcorper eros. Proin eu tempor nisi. Aenean fringilla euismod ante non suscipit. Integer fermentum volutpat enim, vitae tempor diam efficitur a. Integer mollis arcu quis ipsum lobortis, eget dapibus tortor sagittis.</p>
 			</div>
 		</div>
 	</div>
@@ -179,10 +177,6 @@
       	</div>
     </footer>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-	<script src="static/js/holder.min.js"></script>
-	<script src="static/js/app.js"></script>
-</body>
 
-</html>
+    <script src="static/js/holder.min.js"></script>
+</body>
