--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
 	<div class="container">
 		<div class="row">
-			<div class="col-sm-8 col-sm-offset-2">
+			<div class="col-sm-12">
 				<div id="mutlicarousel" class="carousel slide" data-ride="carousel">
 			    	<ol class="carousel-indicators">
 			        	<li data-target="#mutlicarousel" data-slide-to="0" class="active"></li>
@@ -119,13 +119,43 @@
 			      	</ol>
 			      	<div class="carousel-inner" role="listbox">
 			        	<div class="item active">
-			          		<img data-src="holder.js/900x500/auto/#777:#555/text:Première personne" alt="First slide">
+			        		<div class="row">
+			        			<div class="col-sm-4">
+			        				<img data-src="holder.js/350x300/auto/#777:#555/">		
+			        			</div>
+			        			<div class="col-sm-4">
+			        				<img data-src="holder.js/350x300/auto/#777:#555/">		
+			        			</div>
+			        			<div class="col-sm-4">
+			        				<img data-src="holder.js/350x300/auto/#777:#555/">		
+			        			</div>
+			        		</div>
 			        	</div>
 			        	<div class="item">
-			          		<img data-src="holder.js/900x500/auto/#666:#444/text:Deuxième personne" alt="Second slide">
+			          		<div class="row">
+			        			<div class="col-sm-4">
+			        				<img data-src="holder.js/350x300/auto/#777:#555/">		
+			        			</div>
+			        			<div class="col-sm-4">
+			        				<img data-src="holder.js/350x300/auto/#777:#555/">		
+			        			</div>
+			        			<div class="col-sm-4">
+			        				<img data-src="holder.js/350x300/auto/#777:#555/">		
+			        			</div>
+			        		</div>
 			        	</div>
 			        	<div class="item">
-			          		<img data-src="holder.js/900x500/auto/#555:#333/text:Troisième personne" alt="Third slide">
+			          		<div class="row">
+			        			<div class="col-sm-4">
+			        				<img data-src="holder.js/350x300/auto/#777:#555/">		
+			        			</div>
+			        			<div class="col-sm-4">
+			        				<img data-src="holder.js/350x300/auto/#777:#555/">		
+			        			</div>
+			        			<div class="col-sm-4">
+			        				<img data-src="holder.js/350x300/auto/#777:#555/">		
+			        			</div>
+			        		</div>
 			        	</div>
 			      	</div>
 			      	<a class="left carousel-control" href="#mutlicarousel" role="button" data-slide="prev">
