--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
 						<li><p><strong><a href="founding.html">Nous soutenir</a></strong></p></li>
 						<li><p><strong><a href="contact.html">Nous contacter</a></strong></p></li>
 						<li><p><strong><a href="join.html">Inscription</a></strong></p></li>
-						<li><p><strong><a href="join.html">Remerciements</a></strong></p></li>
+						<li><p><strong><a href="thanks.html">Remerciements</a></strong></p></li>
 					</ul>
 					<ul class="list-inline">
 						<li><p class="text-uppercase"><strong>Statut associatif</strong></p></li>
