--- a/blog.html
+++ b/blog.html
@@ -52,10 +52,10 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-sm-8">
-				<div id="mansory-container">
+				<div class="mansory-container" id="mansory-blog">
 	    			<div class="mansory-item">
 	        			<div class="thumbnail">
-	          				<img data-src="holder.js/200x200" alt="Generic placeholder thumbnail">
+	          				<img data-src="holder.js/200x200">
 	          				<div class="caption">
 		            			<h3>Thumbnail label</h3>
 		            			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam purus massa, dignissim ut leo quis, dictum commodo nisl. Donec id varius massa, et tristique eros. Donec nunc leo, vestibulum sodales condimentum ac, tempor eu tortor. Integer pretium velit sit amet mauris dictum, quis venenatis ex accumsan. Cras vehicula a magna finibus vestibulum. Sed eleifend ornare tortor ac auctor. Pellentesque feugiat nisl et purus tempor fermentum.</p>
@@ -65,7 +65,7 @@
 	    			</div>
 			    	<div class="mansory-item">
 			    		<div class="thumbnail">
-			        		<img data-src="holder.js/200x200" alt="Generic placeholder thumbnail">
+			        		<img data-src="holder.js/200x200">
 			          		<div class="caption">
 			            		<h3>Thumbnail label</h3>
 			            		<p>Proin lobortis ex ut augue tristique posuere. Proin bibendum augue quam, eu convallis quam gravida at. Morbi ac porttitor tellus, vel consequat diam. Nam id blandit elit. Nullam tempor mi vel nibh sollicitudin, vel ornare mauris congue. Maecenas ultrices ultricies nisi, a iaculis dolor imperdiet sit amet. Etiam interdum nisi tortor, et aliquam purus ultricies ac. Sed vestibulum dignissim elementum. Nulla sed ornare eros, et finibus ligula. Aliquam eget orci fermentum, luctus nisi nec, feugiat eros. Suspendisse potenti. Nunc sodales dui dolor, in vulputate elit hendrerit vitae. Vivamus dictum egestas leo, vitae tristique sem malesuada ut. Integer sodales ac massa eget condimentum.</p>
@@ -75,7 +75,7 @@
 			      	</div>
 			      	<div class="mansory-item">
 			      		<div class="thumbnail">
-			        		<img data-src="holder.js/200x200" alt="Generic placeholder thumbnail">
+			        		<img data-src="holder.js/200x200">
 			          		<div class="caption">
 			            		<h3>Thumbnail label</h3>
 			            		<p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Pellentesque pulvinar ipsum ac fermentum dignissim. Vivamus nec sem purus. Curabitur nibh ex, facilisis et pulvinar eu, iaculis at risus. Aliquam posuere rhoncus arcu vitae eleifend. Vivamus eu dictum ipsum. Pellentesque sit amet sapien consequat, varius lectus ut, bibendum purus. Phasellus non odio non tortor congue dignissim. Vestibulum accumsan porttitor massa, quis porta risus blandit a. Etiam vitae porta lectus, at ornare mi. Ut eget leo ac tellus dictum scelerisque quis a lacus.</p>
@@ -85,7 +85,7 @@
 			      	</div>
 			      	<div class="mansory-item">
 				        <div class="thumbnail">
-				        	<img data-src="holder.js/200x200" alt="Generic placeholder thumbnail">
+				        	<img data-src="holder.js/200x200">
 				          	<div class="caption">
 				            	<h3>Thumbnail label</h3>
 				            	<p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Pellentesque pulvinar ipsum ac fermentum dignissim. Vivamus nec sem purus. Curabitur nibh ex, facilisis et pulvinar eu, iaculis at risus. Aliquam posuere rhoncus arcu vitae eleifend. Vivamus eu dictum ipsum. Pellentesque sit amet sapien consequat, varius lectus ut, bibendum purus. Phasellus non odio non tortor congue dignissim. Vestibulum accumsan porttitor massa, quis porta risus blandit a. Etiam vitae porta lectus, at ornare mi. Ut eget leo ac tellus dictum scelerisque quis a lacus.</p>
@@ -187,7 +187,7 @@
 						<li><p><strong><a href="founding.html">Nous soutenir</a></strong></p></li>
 						<li><p><strong><a href="contact.html">Nous contacter</a></strong></p></li>
 						<li><p><strong><a href="join.html">Inscription</a></strong></p></li>
-						<li><p><strong><a href="join.html">Remerciements</a></strong></p></li>
+						<li><p><strong><a href="thanks.html">Remerciements</a></strong></p></li>
 					</ul>
 					<ul class="list-inline">
 						<li><p class="text-uppercase"><strong>Statut associatif</strong></p></li>
