--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
     	<div class="container">
     		<div class="row">
     			<div class="col-sm-12">
-    				<p class="lead"><strong>Créaphé</strong></p>
+    				<p class="lead"><strong>Créaphé</strong></p>z
     				<ul class="list-inline">
 						<li><p><strong><a href="blog.html">Blog</a></strong></p></li>
 						<li><p><strong><a href="founding.html">Magazine</a></strong></p></li>
